# graph-skill-code-knowledge

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  SKILL.md  pyproject.toml
.claude/skills/graphskill/: SKILL.md
graphskill/: __init__.py  __main__.py  cli.py  index.py  manifest.py  mcp_server.py  parser.py  registry.py  store.py
graphskill/indexer/: __init__.py  embed.py  extract.py  queries.py  rank.py  resolve.py
tests/: conftest.py  test_embed.py  test_extract.py  test_index_store.py  test_mcp.py  test_rank.py  test_registry.py
tests/fixtures/sample/: auth.py  db.py  handler.go  service.ts
